--- a/public/sass/partials/_nav-bar.scss
+++ b/public/sass/partials/_nav-bar.scss
@@ -4,7 +4,7 @@ nav.navbar {
   .navbar-item {
     &.has-user-avatar {
       .is-user-avatar {
-        margin-right: $default-padding * .5;
+        margin-right: $default-padding * 0.5;
         display: inline-flex;
         width: $navbar-avatar-size;
         height: $navbar-avatar-size;
@@ -77,11 +77,11 @@ nav.navbar {
 
       .navbar-item {
         .icon:first-child {
-          margin-right: $default-padding * .5;
+          margin-right: $default-padding * 0.5;
         }
 
         &.has-dropdown {
-          >.navbar-link {
+          > .navbar-link {
             background-color: $white-ter;
             .icon:last-child {
               display: none;
@@ -90,11 +90,11 @@ nav.navbar {
         }
 
         &.has-user-avatar {
-          >.navbar-link {
+          > .navbar-link {
             display: flex;
             align-items: center;
-            padding-top: $default-padding * .5;
-            padding-bottom: $default-padding * .5;
+            padding-top: $default-padding * 0.5;
+            padding-bottom: $default-padding * 0.5;
           }
         }
       }
@@ -110,7 +110,7 @@ nav.navbar {
 
       &:not(.is-desktop-icon-only) {
         .icon:first-child {
-          margin-right: $default-padding * .5;
+          margin-right: $default-padding * 0.5;
         }
       }
       &.is-desktop-icon-only {
