--- a/public/sass/partials/_theme-default.scss
+++ b/public/sass/partials/_theme-default.scss
@@ -44,7 +44,7 @@ $aside-mobile-width: $size-base * 15;
 $aside-icon-width: $size-base * 3;
 $aside-submenu-font-size: $size-base * 0.95;
 $aside-box-shadow: none;
-$aside-background-color: $base-color;
+$aside-background-color: $white;
 $aside-tools-background-color: darken($aside-background-color, 10%);
 $aside-tools-color: $white;
 
