--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,36 @@ block content
         | Large hero
       p.subtitle
         | Large subtitle
+      button.button.is-light Light
+  article.message.is-primary
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
+  article.message.is-danger
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
+  article.message.is-warning
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
+  article.message
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
