--- a/views/mixins/_loginForm.pug
+++ b/views/mixins/_loginForm.pug
@@ -1,17 +1,19 @@
 mixin loginForm()
-  form.container.is-max-desktop(action="/login" method="POST")
-    .field 
-      label.label Email 
-      .control.has-icons-left 
-        input.input(type="text" placeholder="Enter your email address" name='email')
-        span.icon.is-small.is-left 
-          i.fas.fas-user
-    .field 
-      label.label Password 
-      .control.has-icons-left 
-        input.input(type="password" placeholder="Enter your password" name='password')
-        span.icon.is-small.is-left 
-          i.fas.fas-lock
-    .field 
-      .control 
-        button.button.is-medium.is-fullwidth.is-primary(type="submit") Submit
+  .card
+    .card-content
+      form.container.is-max-desktop(action="/login" method="POST")
+        .field 
+          label.label Email 
+          .control.has-icons-left 
+            input.input(type="text" placeholder="Enter your email address")
+            span.icon.is-small.is-left 
+              i.fas.fas-user
+        .field 
+          label.label Password 
+          .control.has-icons-left 
+            input.input(type="password" placeholder="Enter your password")
+            span.icon.is-small.is-left 
+              i.fas.fas-lock
+        .field 
+          .control 
+            button.button.is-medium.is-fullwidth.is-primary(type="submit") Submit
