--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -30,4 +30,36 @@ block content
       .level-left
         .level-item
           ul
-            li Food donations
+            li.title.is-size-2 Food donations
+  article.message.is-primary
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
+  article.message.is-danger
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
+  article.message.is-warning
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
+  article.message
+    .message-header
+      p Hello World
+      button.delete(aria-label='delete')
+    .message-body
+      | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      strong Pellentesque risus mi
+      | , tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum.
