--- a/views/register.pug
+++ b/views/register.pug
@@ -1,6 +1,7 @@
 extends layout
 include mixins/_registerForm
 include mixins/_formSteps
+include mixins/_sideMessage
 
 block content
     .columns.is-centered.is-vcentered.is-full-height 
