Fixed model issue, amended flashes (TODO)

--- a/public/sass/partials/_flashes.scss
+++ b/public/sass/partials/_flashes.scss
@@ -11,14 +11,7 @@
 }
 
 .flash {
-  background: white;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-  margin-bottom: 2rem;
-  padding: 2rem;
-  position: relative;
-  z-index: 1;
-  border-radius: 3px;
-  display: flex;
+  z-index: 999;
   animation: slideIn forwards .1s ease-in-out 2;
   animation-timing-function: cubic-bezier(0.01, 1.68, 0.58, 1);
   & + .flash {
@@ -27,39 +20,13 @@
       animation-delay: 0.6s;
     }
   }
-  &__text {
-    flex: 1;
+  &-success {
+    background: #9882E4;
   }
-  &__remove {
-    background: none;
-    border:0;
-    &:hover {
-      color: $yellow;
-    }
+  &-error {
+    background: #F04770 !important;
   }
-  &:after {
-    content: '';
-    display: block;
-    background: white;
-    position: absolute;
-    width: calc(100% - 16px);
-    height: calc(100% - 16px);
-    top: 8px;
-    left: 8px;
-    z-index: -1;
-    box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
-    border-radius: 3px;
-  }
-  &--success {
-    background: linear-gradient(135deg, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
-  }
-  &--error {
-    background: linear-gradient(20deg, rgba(255,0,0,1) 0%, rgba(200,0,0,1) 100%);
-  }
-  &--info {
-    background: linear-gradient(35deg, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
-  }
-  p {
-    margin: 0;
+  &-info {
+    background: #FFD33F;
   }
 }
