--- a/views/mixins/_loginForm.pug
+++ b/views/mixins/_loginForm.pug
@@ -5,13 +5,13 @@ mixin loginForm()
         .field 
           label.label Email 
           .control.has-icons-left 
-            input.input(type="text" placeholder="Enter your email address")
+            input.input(type="text" placeholder="Enter your email address" name='email')
             span.icon.is-small.is-left 
               i.fas.fas-user
         .field 
           label.label Password 
           .control.has-icons-left 
-            input.input(type="password" placeholder="Enter your password")
+            input.input(type="password" placeholder="Enter your password" name='password')
             span.icon.is-small.is-left 
               i.fas.fas-lock
         .field 
