--- a/public/sass/partials/_misc.scss
+++ b/public/sass/partials/_misc.scss
@@ -17,7 +17,7 @@
   position: relative;
 
   &:after {
-    content: '';
+    content: "";
     width: $icon-update-mark-size;
     height: $icon-update-mark-size;
     position: absolute;
