--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,8 @@
 block doc-header
   doctype html
   html
-    include mixins/_logo.pug
+    include mixins/_navbar.pug
+    include mixins/_navbar-user-logged.pug
     head
       title= `${title} | ${h.siteName}`
       link(rel='stylesheet', href='/dist/css/style.css')
@@ -9,25 +10,10 @@ block doc-header
       meta(name="viewport" content="width=device-width, initial-scale=1")
     body
       block header
-        nav.navbar.is-fixed-top(role='navigation', aria-label='main navigation')
-          .navbar-brand
-              a.nav__link.nav__link--logo.navbar-item(href="/")
-                +logo(151, 32) 
-          .navbar-menu
-            .navbar-end 
-              each item in h.menu
-                  a.nav__link.navbar-item(href=item.slug ) #{item.title}
-              .navbar-item 
-                .buttons 
-                  if user
-                    a.button.is-primary(href="/logout" )
-                      //- != h.icon('logout')
-                      span Logout
-                    a.button.is-light(href="/account" )
-                      p avatar todo
-                  else
-                    a.button.is-primary(href="/register" ) Sign Up
-                    a.button.is-primary.is-light(href="/login" ) Log In
+        if user 
+          +navbar-user-logged()
+        else 
+          +navbar()
 
     block messages
       if locals.flashes
