--- a/views/login.pug
+++ b/views/login.pug
@@ -7,3 +7,5 @@ block content
         +sideMessage()
         .column.is-three-quarters
             +loginForm()
+            a(href='/account/forgot') Forgotten password?
+
