--- a/views/register.pug
+++ b/views/register.pug
@@ -9,6 +9,8 @@ block content
         .column.is-three-quarters
             +formSteps()
             +registerForm()
+            a(href='/login') Already have an account?
+
 
 block scripts 
     script(src="/dist/js/formHandler.js")
