--- a/views/mixins/_navbar.pug
+++ b/views/mixins/_navbar.pug
@@ -6,9 +6,8 @@ mixin navbar ()
                 +logo(151, 32, '#9882e4') 
         .navbar-menu
             .navbar-end 
-                each item in h.menu
-                    a.nav__link.navbar-item(href=item.slug ) #{item.title}
-                .navbar-item 
-                    .buttons
-                        a.button.is-primary(href="/register" ) Sign Up
-                        a.button.is-primary.is-light(href="/login" ) Sign in
+                block mainMenu
+                    .navbar-item 
+                        .buttons
+                            a.button.is-primary(href="/register" ) Sign Up
+                            a.button.is-primary.is-light(href="/login" ) Sign In
