--- a/views/mixins/_userDropdown.pug
+++ b/views/mixins/_userDropdown.pug
@@ -1,4 +1,4 @@
-mixin user-dropdown() 
+mixin userDropdown()
     .navbar-item.has-dropdown.has-dropdown-with-icons.has-divider.has-user-avatar.is-hoverable.has-text-dark
         a.navbar-link
             .is-user-avatar
