--- a/views/mixins/_navbarDashboard.pug
+++ b/views/mixins/_navbarDashboard.pug
@@ -1,9 +1,9 @@
-include _user-dropdown.pug
-mixin navbar-dashboard () 
+include _userDropdown.pug
+mixin navbarDashboard ()
     nav.navbar.is-fixed-top.is-primary(role='navigation', aria-label='main navigation')
         .navbar-item.has-text-weight-semibold.is-size-5.has-text-white Community fridge name
         .navbar-menu
-            .navbar-end 
+            .navbar-end
                 each item in h.menu
                     a.nav__link.navbar-item(href=item.slug ) #{item.title}
-                +user-dropdown()
+                +userDropdown()
