--- a/views/mixins/_navbarUserLogged.pug
+++ b/views/mixins/_navbarUserLogged.pug
@@ -1,14 +1,13 @@
 include _logo.pug
-include _user-dropdown.pug
+include _userDropdown.pug
 
-mixin navbar-user-logged ()
+mixin navbarUserLogged ()
     nav.navbar.is-fixed-top.is-primary(role='navigation', aria-label='main navigation')
         .navbar-brand
             a.nav__link.nav__link--logo.navbar-item(href="/")
-                +logo(151, 32, '#ffffff') 
+                +logo(151, 32, '#ffffff')
         .navbar-menu
-            .navbar-end 
+            .navbar-end
                 each item in h.menu
                     a.nav__link.navbar-item(href=item.slug ) #{item.title}
-                +user-dropdown()
-                    
+                +userDropdown()
